[gd_scene load_steps=5 format=2]

[ext_resource path="res://hsz/monsters/enemy.gd" type="Script" id=1]
[ext_resource path="res://txy/stats/Stats.gd" type="Script" id=2]
[ext_resource path="res://hsz/utils/hurtbox.gd" type="Script" id=3]
[ext_resource path="res://hsz/others/shadow.png" type="Texture" id=4]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="FlickerTimer" type="Timer" parent="."]

[node name="TrappedTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="hurt" from="Hurtbox" to="." method="_on_Hurtbox_hurt"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_FlickerTimer_timeout"]
[connection signal="timeout" from="TrappedTimer" to="." method="_on_TrappedTimer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
